# Display43ForIFTECH

./: .gitignore  Display4.3.code-workspace  Guide.md  README.md  UPS 335 단독_V6.4_작화 데이터 정리(20140228).xls  Version.h  codeGuide.md  codeHelp.md  gitversiontag.ps1  modbusProtocal.txt  platformio.ini  pre_build.py  troubleshutting.md  version.ps1  결선도.ai  단상 HMI 통신_4_2inch_수정.xlsx
Image/: FlowMain [복구됨].ai  FlowMain.ai  MainPowerOn.ai  Thumbs.db  alarm.ai
SquareLine/SquareLine_Project/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
SquareLine/SquareLine_Project/libraries/ui/src/fonts/: ui_font_digitalWatch32.c  ui_font_digitalWatch56.c  ui_font_malgun14.c
SquareLine/SquareLine_Project/libraries/ui/src/images/: ui_img_alarm1_png.c  ui_img_alarm25_25_png.c  ui_img_alarm30_30_png.c  ui_img_alarm40_40_png.c  ui_img_batterybank_png.c  ui_img_convpwrline_1_png.c  ui_img_convpwrline_2_png.c  ui_img_flowmain1_png.c  ui_img_inverteracdc_png.c  ui_img_outputpowerline_png.c  ui_img_outputpowerlineon_png.c  ui_img_scr_png.c
SquareLine/SquareLine_Project/libraries/ui/src/screens/: ui_InitScreen.c  ui_MainScreen.c  ui_SettingScreen.c  ui_scrAlarm1.c  ui_scrControll.c  ui_scrMeasure.c
doc/: 결선도.ai  단상 HMI 통신_4_2inch.xlsx  단상 HMI 통신_4_2inch_01.xlsx  단상 HMI 통신_4_2inch_수정.xlsx
lib/Lvgl/: lv_conf.h
src/: esp32SelfUploder.cpp  esp32SelfUploder.h  main.cpp  main.h  mainGrobal.h  modbusRtu.cpp  modbusRtu.h  myBlueTooth.cpp  myBlueTooth.h  myui.c  myui.h  touch.h  ui_events.cpp  wifiOTA.cpp  wifiOTA.h
upgradeDoc/: upgradeManual.md  펌웨워업그레이드.docx
(+55 files in other folders)
